infraestructure/ethstats-server/ethstats-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ethstats-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ethstats-server
  template:
    metadata:
      labels:
        app: ethstats-server
    spec:
      containers:
      - name: ethstats-server
        image: hemilabs/ethstats-server:latest
        ports:
        - containerPort: 3000
      restartPolicy: Always
      imagePullSecrets:
      - name: dockerhub-secret
