infraestructure/ethstats-server/ethstats-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ethstats-server
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: ethstats-server
